fixing fa logos and openshift 3 sig page

--- a/stylesheets/_custom.scss
+++ b/stylesheets/_custom.scss
@@ -248,7 +248,7 @@ ul.social {
 	-moz-border-radius: 6px;
 	-webkit-border-radius: 6px;
 	border-radius: 6px;
-	color: #fff;
+	color: #CC0000;
 	text-align: center;
 }
 .service-03  h3{
