--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1228,6 +1228,8 @@ header .container{
     -ms-transform: scale(0.1, 0.1);
     -webkit-transform: scale(0.1, 0.1);
 	width: 100%;*/
+	width:	100%;
+	height: 100%;
 }
 .item-work{
 	padding: 5px;	
